"dropping the nan values from employment field"

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "[89184 rows x 84 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "73"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -4747,7 +4747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4762,7 +4762,7 @@
        "       'Wholesale', 'Advertising Services'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4773,7 +4773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4795,7 +4795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4876,7 +4876,7 @@
        " 'ConvertedCompYearly': 46.15738249013276}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4890,7 +4890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4933,7 +4933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -5099,7 +5099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -5117,7 +5117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -5215,7 +5215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -5250,7 +5250,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5262,7 +5262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -5365,7 +5365,7 @@
        "max    89184.000000  5.000000e+46     50.000000         7.435143e+07"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5376,7 +5376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -5406,7 +5406,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5429,7 +5429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -5470,7 +5470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -5502,7 +5502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -5513,7 +5513,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5524,16 +5524,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"new_work_df.to_csv('sample/work.csv', index=False)\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"new_work_df.to_csv('sample/work.csv', index=False)\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -6334,7 +6345,7 @@
        "[20 rows x 65 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6345,7 +6356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -6354,7 +6365,7 @@
        "Index(['ResponseId', 'CompTotal', 'WorkExp', 'ConvertedCompYearly'], dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6362,6 +6373,127 @@
    "source": [
     "numeric_columns  = new_work_df.select_dtypes(include=['int', 'float']).columns\n",
     "numeric_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'Employed, full-time',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed',\n",
+       "       'Not employed, but looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed',\n",
+       "       'Student, full-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Employed, part-time;Student, part-time',\n",
+       "       'Not employed, but looking for work;Student, full-time',\n",
+       "       'Employed, part-time;Student, part-time', 'Employed, part-time',\n",
+       "       'Student, full-time;Employed, part-time', 'I prefer not to say',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Employed, part-time',\n",
+       "       'Employed, full-time;Student, part-time',\n",
+       "       'Not employed, but looking for work;Employed, part-time',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Student, part-time',\n",
+       "       'Retired', 'Employed, full-time;Student, full-time',\n",
+       "       'Student, full-time;Student, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Student, full-time',\n",
+       "       'Not employed, and not looking for work', 'Student, part-time',\n",
+       "       'Student, full-time;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Not employed, but looking for work',\n",
+       "       'Employed, full-time;Employed, part-time',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Not employed, and not looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed;Student, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Student, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, and not looking for work',\n",
+       "       'Student, full-time;Employed, part-time;Not employed, and not looking for work',\n",
+       "       'Not employed, but looking for work;Student, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed;Student, full-time;Employed, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Student, full-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Employed, part-time',\n",
+       "       'Employed, full-time;Employed, part-time;Student, part-time',\n",
+       "       'Not employed, but looking for work;Student, full-time;Student, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Employed, part-time',\n",
+       "       'Student, part-time;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Student, full-time',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Employed, part-time;Student, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Employed, part-time;Retired',\n",
+       "       'Not employed, but looking for work;Not employed, and not looking for work',\n",
+       "       'Retired;Not employed, and not looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed;Retired',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Student, full-time;Employed, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Student, full-time;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Not employed, but looking for work',\n",
+       "       'Not employed, but looking for work;Employed, part-time;Student, part-time',\n",
+       "       'Student, full-time;Employed, part-time;Student, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Student, part-time;Not employed, and not looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed;Student, full-time;Employed, part-time;Student, part-time',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Student, full-time;Retired',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Student, full-time;Employed, part-time;Student, part-time',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Student, full-time;Student, part-time',\n",
+       "       'Employed, full-time;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Student, full-time;Employed, part-time;Student, part-time',\n",
+       "       'Not employed, but looking for work;Student, full-time;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Employed, part-time',\n",
+       "       'Employed, full-time;Not employed, but looking for work;Student, full-time;Student, part-time',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Student, full-time;Employed, part-time',\n",
+       "       'Not employed, but looking for work;Student, full-time;Employed, part-time',\n",
+       "       'Employed, full-time;Not employed, but looking for work;Student, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Student, part-time;Retired',\n",
+       "       'Employed, part-time;Student, part-time;Retired',\n",
+       "       'Employed, full-time;Retired', 'Employed, part-time;Retired',\n",
+       "       'Employed, full-time;Not employed, but looking for work;Student, full-time',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Student, full-time;Employed, part-time;Student, part-time;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Not employed, and not looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Retired',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Employed, part-time;Student, part-time',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Student, full-time;Not employed, and not looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Student, full-time;Employed, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Employed, part-time;Not employed, and not looking for work',\n",
+       "       'Student, full-time;Retired',\n",
+       "       'Employed, full-time;Student, full-time;Employed, part-time;Student, part-time',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Retired',\n",
+       "       'Not employed, but looking for work;Student, full-time;Student, part-time;Not employed, and not looking for work',\n",
+       "       'Student, full-time;Student, part-time;Not employed, and not looking for work',\n",
+       "       'Not employed, but looking for work;Retired',\n",
+       "       'Employed, full-time;Student, full-time;Retired',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Student, part-time;Retired',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Student, full-time;Not employed, and not looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed;Retired;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Student, full-time;Student, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Student, full-time;Student, part-time',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Employed, part-time;Not employed, and not looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed;Student, full-time;Retired',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Student, full-time;Employed, part-time;Student, part-time;Retired;Not employed, and not looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Student, full-time;Student, part-time',\n",
+       "       'Employed, part-time;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Retired',\n",
+       "       'Employed, full-time;Student, part-time;Retired',\n",
+       "       'Employed, full-time;Not employed, but looking for work;Employed, part-time',\n",
+       "       'Not employed, but looking for work;Student, part-time;Not employed, and not looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Student, full-time;Student, part-time;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Student, full-time;Student, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Student, full-time;Employed, part-time;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Student, full-time;Not employed, and not looking for work',\n",
+       "       'Not employed, but looking for work;Student, full-time;Employed, part-time;Student, part-time',\n",
+       "       'Independent contractor, freelancer, or self-employed;Student, full-time;Student, part-time;Not employed, and not looking for work',\n",
+       "       'Employed, full-time;Student, full-time;Employed, part-time;Student, part-time;Not employed, and not looking for work',\n",
+       "       'Independent contractor, freelancer, or self-employed;Not employed, but looking for work;Employed, part-time;Retired',\n",
+       "       'Employed, full-time;Not employed, but looking for work;Student, full-time;Employed, part-time;Student, part-time',\n",
+       "       'Employed, full-time;Not employed, but looking for work;Employed, part-time;Student, part-time'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "work_df['Employment'].unique()"
    ]
   },
   {
