--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "[89184 rows x 84 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "73"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -4747,7 +4747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -4762,7 +4762,7 @@
        "       'Wholesale', 'Advertising Services'], dtype=object)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4773,7 +4773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -4795,7 +4795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -4876,7 +4876,7 @@
        " 'ConvertedCompYearly': 46.15738249013276}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4890,7 +4890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -4933,7 +4933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -5099,7 +5099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -5117,7 +5117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -5215,7 +5215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -5250,7 +5250,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5262,7 +5262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -5365,7 +5365,7 @@
        "max    89184.000000  5.000000e+46     50.000000         7.435143e+07"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5376,7 +5376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -5406,7 +5406,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5429,7 +5429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -5470,7 +5470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -5502,7 +5502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -5513,7 +5513,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5524,7 +5524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -5533,7 +5533,7 @@
        "\"new_work_df.to_csv('sample/work.csv', index=False)\""
       ]
      },
-     "execution_count": 62,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5544,7 +5544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -6345,7 +6345,7 @@
        "[20 rows x 65 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6356,7 +6356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -6365,7 +6365,7 @@
        "Index(['ResponseId', 'CompTotal', 'WorkExp', 'ConvertedCompYearly'], dtype='object')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6377,7 +6377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -6487,7 +6487,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6498,7 +6498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6507,7 +6507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -6945,7 +6945,7 @@
        "[5490 rows x 65 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6956,7 +6956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -6986,7 +6986,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6997,7 +6997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -7017,7 +7017,7 @@
        "Length: 65, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7028,7 +7028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -7146,7 +7146,7 @@
        "[87898 rows x 3 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7157,7 +7157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -7232,7 +7232,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7243,7 +7243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7252,91 +7252,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13120/1800937845.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  new_work_df['Currency'].fillna('USD\\tUnited States dollar', inplace=True)\n"
+      "/tmp/ipykernel_13120/3030465465.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  null_currency_rows = n_work_df[new_work_df['Currency'].isnull()]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0        USD\\tUnited States dollar\n",
-       "1        USD\\tUnited States dollar\n",
-       "2        USD\\tUnited States dollar\n",
-       "3        USD\\tUnited States dollar\n",
-       "4             PHP\\tPhilippine peso\n",
-       "                   ...            \n",
-       "89179          BRL\\tBrazilian real\n",
-       "89180    USD\\tUnited States dollar\n",
-       "89181    USD\\tUnited States dollar\n",
-       "89182    USD\\tUnited States dollar\n",
-       "89183            IRR\\tIranian rial\n",
-       "Name: Currency, Length: 89184, dtype: object"
+       "CompTotal              100.0\n",
+       "Currency               100.0\n",
+       "ConvertedCompYearly    100.0\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_work_df['Currency'].fillna('USD\\tUnited States dollar', inplace=True)\n",
-    "new_work_df['Currency']"
+    "null_currency_rows = n_work_df[new_work_df['Currency'].isnull()]\n",
+    "(null_currency_rows[['CompTotal', 'Currency', 'ConvertedCompYearly']].isnull().sum()/null_currency_rows.shape[0])*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_df = n_work_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_df = one_df.dropna(subset=['Currency'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_df['Currency'].isnull().sum()/one_df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13120/2670671045.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_13120/3603474730.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  n_work_df['Currency'] = new_work_df['Currency'].apply(lambda x: x.split('\\t')[0])\n"
+      "  one_df['Currency'] = one_df['Currency'].apply(lambda x: x.split('\\t')[0])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0        USD\\tUnited States dollar\n",
-       "1        USD\\tUnited States dollar\n",
-       "2        USD\\tUnited States dollar\n",
-       "3        USD\\tUnited States dollar\n",
-       "4             PHP\\tPhilippine peso\n",
-       "                   ...            \n",
-       "89179          BRL\\tBrazilian real\n",
-       "89180    USD\\tUnited States dollar\n",
-       "89181    USD\\tUnited States dollar\n",
-       "89182    USD\\tUnited States dollar\n",
-       "89183            IRR\\tIranian rial\n",
-       "Name: Currency, Length: 89184, dtype: object"
+       "1        USD\n",
+       "2        USD\n",
+       "3        USD\n",
+       "4        PHP\n",
+       "5        GBP\n",
+       "        ... \n",
+       "89175    USD\n",
+       "89177    MXN\n",
+       "89178    USD\n",
+       "89179    BRL\n",
+       "89183    IRR\n",
+       "Name: Currency, Length: 65298, dtype: object"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n_work_df['Currency'] = n_work_df['Currency'].apply(lambda x: x.split('\\t')[0])\n",
-    "new_work_df['Currency']"
+    "one_df['Currency'] = one_df['Currency'].apply(lambda x: x.split('\\t')[0])\n",
+    "one_df['Currency']"
    ]
   },
   {
