--- a/test.ipynb
+++ b/test.ipynb
@@ -7366,6 +7366,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a CurrencyRates object\n",
+    "c = CurrencyRates()\n",
+    "\n",
+    "# Function to convert currency to USD\n",
+    "def convert_to_usd(comp_total, currency):\n",
+    "    try:\n",
+    "        # Convert currency to USD\n",
+    "        return c.convert(currency, 'USD', comp_total)\n",
+    "    except:\n",
+    "        # Handle errors or unsupported currencies\n",
+    "        return None\n",
+    "\n",
+    "# Apply conversion function to each row where ConvertedCompYearly is null\n",
+    "n_work_df.loc[(n_work_df['ConvertedCompYearly'].isnull()) & \n",
+    "              (n_work_df['CompTotal'].notnull()) &\n",
+    "              (n_work_df['Currency'].notnull()), 'ConvertedCompYearly'] = \\\n",
+    "    n_work_df.apply(lambda row: convert_to_usd(row['CompTotal'], row['Currency']), axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
