--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "[89184 rows x 84 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "73"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -4747,7 +4747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -4762,7 +4762,7 @@
        "       'Wholesale', 'Advertising Services'], dtype=object)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4773,7 +4773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4795,7 +4795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4876,7 +4876,7 @@
        " 'ConvertedCompYearly': 46.15738249013276}"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4890,7 +4890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4933,7 +4933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -5099,7 +5099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -5117,7 +5117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -5215,7 +5215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -5250,7 +5250,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5262,7 +5262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -5365,7 +5365,7 @@
        "max    89184.000000  5.000000e+46     50.000000         7.435143e+07"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5376,7 +5376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -5406,7 +5406,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5429,7 +5429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -5470,7 +5470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -5502,7 +5502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -5513,7 +5513,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5524,7 +5524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -5533,7 +5533,7 @@
        "\"new_work_df.to_csv('sample/work.csv', index=False)\""
       ]
      },
-     "execution_count": 132,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5544,7 +5544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -6345,7 +6345,7 @@
        "[20 rows x 65 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6356,7 +6356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -6365,7 +6365,7 @@
        "Index(['ResponseId', 'CompTotal', 'WorkExp', 'ConvertedCompYearly'], dtype='object')"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6377,7 +6377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -6487,7 +6487,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6498,7 +6498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6507,7 +6507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -6945,7 +6945,7 @@
        "[5490 rows x 65 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6956,7 +6956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -6986,7 +6986,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6997,7 +6997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -7017,7 +7017,7 @@
        "Length: 65, dtype: float64"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7028,7 +7028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -7146,7 +7146,7 @@
        "[87898 rows x 3 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7157,7 +7157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -7232,7 +7232,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7243,7 +7243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7252,14 +7252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13120/3030465465.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_816/3030465465.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  null_currency_rows = n_work_df[new_work_df['Currency'].isnull()]\n"
      ]
     },
@@ -7272,7 +7272,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7284,7 +7284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7293,7 +7293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7302,7 +7302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -7311,7 +7311,7 @@
        "0.0"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7322,14 +7322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13120/3603474730.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_816/3603474730.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -7354,7 +7354,7 @@
        "Name: Currency, Length: 65298, dtype: object"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7366,7 +7366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7383,9 +7383,9 @@
     "        return None\n",
     "\n",
     "# Apply conversion function to each row where ConvertedCompYearly is null\n",
-    "n_work_df.loc[(n_work_df['ConvertedCompYearly'].isnull()) & \n",
-    "              (n_work_df['CompTotal'].notnull()) &\n",
-    "              (n_work_df['Currency'].notnull()), 'ConvertedCompYearly'] = \\\n",
+    "one_df.loc[(one_df['ConvertedCompYearly'].isnull()) & \n",
+    "              (one_df['CompTotal'].notnull()) &\n",
+    "              (one_df['Currency'].notnull()), 'ConvertedCompYearly'] = \\\n",
     "    n_work_df.apply(lambda row: convert_to_usd(row['CompTotal'], row['Currency']), axis=1)\n"
    ]
   },
